--- a/lunatech.css
+++ b/lunatech.css
@@ -31,3 +31,23 @@
     color: #EAE7DF;
     text-decoration: none;
 }
+
+/*Landing Page Styles*/
+.vid-bg {
+    position: relative;
+    width: 100%;
+    height: 100vh; 
+    overflow: hidden;
+}
+.video-background iframe {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: auto;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+    z-index: -1; 
+}
