--- a/lunatech.css
+++ b/lunatech.css
@@ -1,3 +1,8 @@
+body {
+    overflow: hidden;
+    margin: 0;
+}
+
 /*Navbar Styles*/
 .navbar {
     background-color: #0D0B1C;
@@ -34,20 +39,21 @@
 
 /*Landing Page Styles*/
 .vid-bg {
-    position: relative;
-    width: 100%;
-    height: 100vh; 
-    overflow: hidden;
-}
-.video-background iframe {
     position: absolute;
-    top: 50%;
-    left: 50%;
     width: 100%;
-    height: auto;
-    min-width: 100%;
-    min-height: 100%;
+    overflow: hidden;
     object-fit: cover;
     pointer-events: none;
-    z-index: -1; 
+    z-index: -1;
+    filter: hue-rotate(10deg) brightness(65%) saturate(100%);
+}
+.landing-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 85vh;
+    z-index: 1;
+}
+.landing-logo img {
+    width: 70%;
 }
