--- a/lunatech.css
+++ b/lunatech.css
@@ -1,11 +1,12 @@
 body {
-    overflow: hidden;
     margin: 0;
 }
 
 /*Navbar Styles*/
 .navbar {
     background-color: #0D0B1C;
+    position: fixed;
+    z-index: 1;
 }
 .nav-box, .nav-left, .nav-right, .nav-right a {
     display: flex;
@@ -41,6 +42,7 @@ body {
 .vid-bg {
     position: absolute;
     width: 100%;
+    height: 100%;
     overflow: hidden;
     object-fit: cover;
     pointer-events: none;
@@ -51,9 +53,31 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 85vh;
+    height: 100vh;
     z-index: 1;
 }
 .landing-logo img {
     width: 70%;
+}
+
+/*Landing Page Bestsellers*/
+.featured {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 8%;
+    margin-top: 3%;
+}
+.feature-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:aliceblue;
+    margin-top: 5%;
+}
+.card {
+    border: none;
+}
+.featured :hover {
+    opacity: 70%;
 }
