--- a/lunatech.css
+++ b/lunatech.css
@@ -14,9 +14,12 @@ overflow-x: hidden;
     display: flex;
     align-items: center;
 }
+.nav-left a {
+    max-width: 20%;
+    margin-left: 6%; 
+}
 .nav-left img {
-    width: 6%;
-    margin-left: 6%;
+    width: 35%; 
 }
 .nav-right {
     justify-content: flex-end;
@@ -41,6 +44,9 @@ overflow-x: hidden;
 }
 
 /*Landing Page Styles*/
+.landing {
+    background-color: #0D0B1C;
+}
 .vid-bg {
     position: absolute;
     width: 100%;
@@ -108,6 +114,7 @@ overflow-x: hidden;
     border-radius : 100% 100% 5% 5%;
 }
 
+
 /*Product Details Styles*/
 .product-box{
     display: flex;
@@ -145,3 +152,61 @@ overflow-x: hidden;
 }
 
 
+/*Login Page Styles*/
+.login {
+    font-family: Arial, sans-serif;
+    background-color: #0D0B1C;
+    color: #EAE7DF;
+}
+.form-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8%;
+}
+.form-container {
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    width: 40%; 
+}
+h2 {
+    color: #EAE7DF;
+    font-size: 2.5rem;
+    font-weight: normal;
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 0.5rem;
+    margin: .5rem 0;
+    border: 1px solid #EAE7DF;
+    border-radius: 4px;
+    background-color: #0D0B1C;
+    color: #EAE7DF;
+}
+.login-button, .acct-button {
+    background-color: #EAE7DF;
+    color: #0D0B1C;
+    border: none;
+    padding: 0.5rem 1rem;
+    margin-top: 1.5rem;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 100%;
+}
+.login-button:hover, .acct-button:hover {
+    background-color: #C2BEB3;
+}
+.logout-link, .signup-link, .login-link {
+    color: #EAE7DF;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    margin-top: 1rem;
+}
+.logout-link:hover, .signup-link:hover, .login-link:hover {
+    color: #C2BEB3;
+}
