--- a/lunatech.css
+++ b/lunatech.css
@@ -165,12 +165,15 @@ overflow-x: hidden;
     margin-top: 8%;
 }
 .form-container {
-    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 4rem;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
     width: 40%; 
-}
-h2 {
+} .login-heading {
     color: #EAE7DF;
     font-size: 2.5rem;
     font-weight: normal;
@@ -200,12 +203,12 @@ input[type="password"] {
 .login-button:hover, .acct-button:hover {
     background-color: #C2BEB3;
 }
-.logout-link, .signup-link, .login-link {
+.log-link, .signup-link, .login-link {
     color: #EAE7DF;
     text-decoration: none;
     text-align: center;
     display: block;
-    margin-top: 1rem;
+    padding: 0.5rem;
 }
 .logout-link:hover, .signup-link:hover, .login-link:hover {
     color: #C2BEB3;
