--- a/lunatech.css
+++ b/lunatech.css
@@ -197,8 +197,7 @@ body {
   margin-bottom: 1.5rem;
   text-align: center;
 }
-input[type="text"],
-input[type="password"] {
+.login-input {
   width: 100%;
   padding: 0.5rem;
   margin: 0.5rem 0;
@@ -255,7 +254,7 @@ input[type="password"] {
 .sidebar {
   /*margin-top: 2rem;*/
   width: 15%;
-  background-color:#0d0b1c;
+  background-color: #0d0b1c;
   color: white;
   height: 100vh;
   position: fixed;
@@ -266,11 +265,11 @@ input[type="password"] {
   flex-direction: column;
 }
 .sidebar-inner {
-    width: 100%;
-    box-sizing: border-box;
+  width: 100%;
+  box-sizing: border-box;
 }
 .sidebar-main {
-    padding-left: 1.25rem;
+  padding-left: 1.25rem;
 }
 .sidebar-img-main {
   max-width: 10rem;
@@ -339,35 +338,71 @@ input[type="password"] {
   margin: 0;
 }
 
-/*------------------------------------------- All Products Dashboard -------------------------------------------*/
+/*------------------------------------------- Products Dashboard Styles ------------------------------------------*/
 .inventory-border {
- border: #232c47 solid 1px;
- border-radius: 15px;
- margin-bottom: 1.5rem;
+  border: #232c47 solid 1px;
+  border-radius: 15px;
+  margin-bottom: 1.5rem;
 }
 .inventory {
- width: 100%;
- border-spacing: 0;
+  width: 100%;
+  border-spacing: 0;
 }
 /* Table Header */
 .inventory th {
   padding: 1rem 1rem 0.5rem;
-  background-color: #f8f9fa; 
-  border-bottom: 1px solid #232c47; 
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #232c47;
   text-align: left;
+}
+.inv-search-cont {
+  display: flex;
+  align-items: center;
+  margin-left: 5rem;
+  margin-top: 0.5rem;
+}
+.inv-search {
+  display: flex;
+  align-items: center;
+}
+.inv-search-input {
+  color: #0d0b1c;
+  outline: none;
+  padding: 8px;
+  margin-right: 8px;
+}
+.inv-search-btn {
+  padding: 8px 12px;
+  background-color: #343f5e;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.inv-search-input,
+.inv-search-btn {
+  border: solid 1px #343f5e;
+  border-radius: 5px;
+}
+.inv-search-btn:hover {
+  background-color: #333;
 }
 
 /* Table Rows */
 .inventory td {
-  padding: 1rem 1.5rem; 
+  padding: 0.5rem 1rem;
   border-bottom: 1px solid #ddd;
   text-align: left;
 }
 .inventory tr:last-child td {
   border-bottom: none;
 }
-#pr-name, #pr-price {
-  margin-left: -8rem;
+#pr-name,
+#pr-price {
+  margin-left: -5rem;
+  margin-right: 7rem;
+}
+#pr-name {
+  margin-top: 0.75rem;
 }
 #pr-price {
   font-size: 1.05rem;
@@ -375,9 +410,12 @@ input[type="password"] {
 }
 
 /*Buttons*/
+.inv-btns {
+  margin-left: 11rem;
+}
 .inv-btn {
   border: none;
-  margin: 0;
+  margin-right: -1rem;
   white-space: nowrap;
 }
 .inv-btn-link {
@@ -388,16 +426,93 @@ input[type="password"] {
 #manage-btn {
   padding: 8px 12px;
   border-radius: 5px;
-  margin-right: -7rem;
-  background-color: #0d0b1c;
+  background-color: #343f5e;
 }
 #delete-btn {
   background-color: transparent;
   margin-left: 1rem;
-  margin-right: -2rem;
 }
 .img-delete {
   max-width: 2rem;
+  margin-top: -0.25rem;
+}
+/*----------------------------------------------- Add Product Styles --------------------------------------------*/
+.add-pr-form {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.add-pr-left {
+  display: inline-block;
+  vertical-align: top;
+  width: 62%; 
+  padding: 3% 4%;
+}
+.add-pr-right {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  width: 35%; 
+  margin-right: 0; 
+}
+.add-pr-right-inner {
+  padding: 10% 8% 3%;
+}
+.add-pr-right-inner, .add-pr-left {
+  border: 1px solid black;
+  border-radius: 12px;
+}
+
+.add-pr-form input, .add-pr-form textarea, .add-pr-form select {
+  width: 100%; 
+  padding: 8px;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+.add-pr-form textarea {
+  margin-bottom: -0.5rem;
+}
+.new-img-cont{
+  margin-top: 1.75rem;
+}
+#new-img {
+  border: none;
+  margin-top: -0.25rem;
+  margin-bottom: 0.4rem;
+  margin-left: -0.35rem;
+}
+.add-pr-form button {
+  width: 100%;
+  padding: 10px 15px;
+  background-color: #0d0b1c;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+.add-pr-form button:hover {
+  background-color: #333;
+}
+.add-pr-right-inner hr {
+  position: absolute; /* Allows positioning relative to .add-pr-right */
+  left: 0; 
+  width: 100%; 
+  margin: 0;
+  margin-top: 0.5rem;
+  border: 0;
+  border-top: 2px solid black;
+  box-sizing: border-box;
+}
+
+.add-pr-form label {
+  display: block;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
 }
 
 
