--- a/lunatech.css
+++ b/lunatech.css
@@ -160,27 +160,13 @@ body {
   background-color: #0d0b1c;
   color: #eae7df;
 }
-.login-body,
-.create-acct-body {
+.login-body {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .login-body {
   margin-top: 4rem;
-}
-.create-acct-body {
-  margin-top: 1rem;
-}
-.create-acct-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 4rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  width: 40%;
 }
 .login-container {
   display: flex;
@@ -236,6 +222,32 @@ body {
 .signup-link:hover,
 .login-link:hover {
   color: #c2beb3;
+}
+/*---------------------------------------------- Signup Styles ---------------------------------------------------*/
+.create-acct-body {
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.create-acct-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 4rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 40%;
+}
+.signup-input {
+  width: 100%;
+  padding: 0.5rem;
+  margin: 0.25rem 0;
+  border: 1px solid #eae7df;
+  border-radius: 4px;
+  background-color: #0d0b1c;
+  color: #eae7df;
 }
 
 /*----------------------------------------------- Cart Styles ----------------------------------------------------*/
@@ -341,17 +353,17 @@ body {
 }
 
 /*------------------------------------------- Products Dashboard Styles ------------------------------------------*/
-.inventory-border {
+.table-border {
   border: #232c47 solid 1px;
   border-radius: 15px;
   margin-bottom: 1.5rem;
 }
-.inventory {
+.my-table {
   width: 100%;
   border-spacing: 0;
 }
 /* Table Header */
-.inventory th {
+.my-table th {
   padding: 1rem 1rem 0.5rem;
   background-color: #f8f9fa;
   border-bottom: 1px solid #232c47;
@@ -390,12 +402,12 @@ body {
 }
 
 /* Table Rows */
-.inventory td {
+.my-table td {
   padding: 0.5rem 1rem;
   border-bottom: 1px solid #ddd;
   text-align: left;
 }
-.inventory tr:last-child td {
+.my-table tr:last-child td {
   border-bottom: none;
 }
 #pr-name,
@@ -435,7 +447,7 @@ body {
   margin-left: 1rem;
 }
 .img-delete {
-  max-width: 1.75rem;
+  width: 1.75rem;
   margin-top: -0.5rem;
 }
 /*----------------------------------------------- Add Product Styles --------------------------------------------*/
@@ -449,7 +461,7 @@ body {
   background-color: #f8f9fa;
   display: inline-block;
   vertical-align: top;
-  width: 62%; 
+  width: 62%;
   padding: 3% 4%;
 }
 .add-pr-right {
@@ -457,19 +469,22 @@ body {
   position: relative;
   display: inline-block;
   vertical-align: top;
-  width: 35%; 
-  margin-right: 0; 
+  width: 35%;
+  margin-right: 0;
 }
 .add-pr-right-inner {
   padding: 10% 8% 3%;
 }
-.add-pr-right-inner, .add-pr-left {
+.add-pr-right-inner,
+.add-pr-left {
   border: 1px solid black;
   border-radius: 12px;
 }
 
-.add-pr-form input, .add-pr-form textarea, .add-pr-form select {
-  width: 100%; 
+.add-pr-form input,
+.add-pr-form textarea,
+.add-pr-form select {
+  width: 100%;
   padding: 8px;
   margin-bottom: 1rem;
   border-radius: 5px;
@@ -479,7 +494,7 @@ body {
 .add-pr-form textarea {
   margin-bottom: -0.5rem;
 }
-.new-img-cont{
+.new-img-cont {
   margin-top: 1.75rem;
 }
 #new-img {
@@ -491,7 +506,7 @@ body {
 .add-pr-form button {
   width: 100%;
   padding: 10px 15px;
-  background-color: #0d0b1c;
+  background-color: #343f5e;
   color: white;
   border: none;
   border-radius: 5px;
@@ -504,8 +519,8 @@ body {
 }
 .add-pr-right-inner hr {
   position: absolute; /* Allows positioning relative to .add-pr-right */
-  left: 0; 
-  width: 100%; 
+  left: 0;
+  width: 100%;
   margin: 0;
   margin-top: 0.5rem;
   border: 0;
@@ -519,8 +534,251 @@ body {
   margin-bottom: 0.5rem;
 }
 
-
 /*--------------------------------------------- Manage Product Styles -------------------------------------------*/
 .manage-product-container {
+  background-color: #f8f9fa;
+  border: 1px solid black;
+  border-radius: 12px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  margin-top: -0.75rem;
+}
+.manage-left,
+.manage-right {
+  padding: 3% 4% 0;
+}
+.manage-left {
+  flex-direction: column;
+  vertical-align: top;
+  width: 60%;
+  margin-bottom: 0;
+}
+.manage-left-inner {
+  margin-top: -1rem;
+}
+.manage-left-inner label {
+  font-weight: 500;
+  margin-bottom: 0.25rem;
+}
+.manage-right {
+  display: flex;
+  flex-direction: column;
+  vertical-align: top;
+  width: 40%;
+  margin-right: 0;
+}
+.divider {
+  width: 1px; /* Thin vertical line */
+  background-color: #000; /* Black border color */
+}
+
+/*Split Layout for Image Upload*/
+.manage-img-cont {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 10px;
+  margin-top: -0.5rem;
+  margin-left: -1%;
+}
+.manage-img {
+  width: 4rem;
+}
+.manage-img-upload {
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-left: 1rem;
+}
+.manage-img-upload label {
+  font-size: 20px;
+  font-weight: 500;
+}
+#manage-img-upload {
+  border: none;
+  margin-top: 0;
+  margin-left: -0.4rem;
+}
+
+.input-group label {
+  font-size: 16px;
+  font-weight: 500;
+  text-align: right;
+  margin-bottom: 1rem;
+  width: 20%;
+  margin-right: 1rem;
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
+}
+.input-group {
+  display: flex;
+  align-items: center;
+}
+.input-group input,
+.input-group select {
+  flex: 1;
+  border-top-left-radius: 8px !important;
+  border-top-left-radius: 8px !important;
+}
+/*fixing weird sharp corner override*/
+.input-group > input:first-child,
+.input-group > select:first-child {
+  border-top-left-radius: 8px; /* Ensure top-left corner is rounded */
+}
+.input-group > input:last-child,
+.input-group > select:last-child {
+  border-bottom-left-radius: 8px !important; /* Ensure bottom-left corner is rounded */
+}
+.manage-product-container button,
+.manage-product-container input,
+.manage-product-container select,
+.manage-product-container textarea {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  font-size: 14px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+.manage-product-container button {
+  background-color: #343f5e;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+#manage-delete {
+  margin-top: 4.75rem;
+  color: #000;
+  background-color: white;
+  border: 1px solid black;
+}
+/*---------------------------------------- Employee Dashboard Styles --------------------------------------------*/
+/*Note: borrowed table styling from the Product Dashboard section*/
+.emp-btn {
+  display: inline-block;
+  padding: 0.35rem 0.75rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  white-space: nowrap;
+  color: #000;
+  background-color: #f8f9fa;
+  border: 1px solid #878589;
+}
+.emp-priv {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.emp-priv select {
+  flex: 1;
+  border: 1px solid #878589;
+  padding: 0.35rem 0.75rem;
+  border-radius: 5px;
+}
+.emp-priv button {
+  flex: 0;
+  background-color: #343f5e;
+  color: white;
+}
+/*------------------------------------------ Employee Profile Styles -------------------------------------------*/
+.emp-prfl-cont {
+  display: flex;
+  margin-top: 2rem;
+  margin-left: 6rem;
+  gap: 1.5rem;
+}
+
+.emp-prfl-left,
+.emp-prfl-right {
+  background-color: #f8f9fa;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+.emp-prfl-left {
+  width: 40%;
+  align-items: center; 
+}
+.emp-prfl-right {
+  width: 50%;
+}
+
+#profile-img {
+  width: 10rem;
+  margin-bottom: 1.75rem;
+}
+
+.emp-select {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+.emp-select select {
+  border: 1px solid #878589;
+  border-radius: 5px;
+  margin-right: 0.25rem;
+  padding: 0.5rem;
+  width: 13rem;
+}
+.emp-select button, .term-btn {
+  background-color: #343f5e;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  width: 10rem;
+}
+.term-btn {
+  width: 100%;
+  margin-top: 5rem;
+  margin-bottom: 0;
+  background-color: white;
+  border: 1px solid #000;
+  color: #000;
+}
+
+/*------------------------------------------ Logged-In User Profile -------------------------------------------- */
+.user-prfl-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-prfl {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  width: 50%;
+  margin-bottom: 0.75rem;
+  border: 2px solid #ccc;
+  border-radius: 15px;
+  background-color: white;
+  padding: 1rem;
+}
+#user-img {
+  width: 13.5rem;
+  margin-bottom: 1rem;
   margin-top: 1rem;
+}
+.user-prfl a {
+  margin-top: 1.5rem;
+  display: block;
+  width: 30%;
+  padding: 0.5rem 1rem;
+  background-color: #343f5e;
+  text-decoration: none;
+  font-size: 1.25rem;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
